Loading documents to archival memory of letta agent

--- a/letta_test.ipynb
+++ b/letta_test.ipynb
@@ -18,11 +18,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Creating the client and setting default LLM and Embedding Model\n",
-    "client = letta.create_client()\n",
+    "# Creating the letta_client and setting default LLM and Embedding Model\n",
+    "letta_client = letta.create_client()\n",
     "\n",
-    "client.set_default_llm_config(letta.LLMConfig.default_config(\"gpt-4o-mini\")) \n",
-    "client.set_default_embedding_config(letta.EmbeddingConfig.default_config(\"text-embedding-ada-002\")) "
+    "letta_client.set_default_llm_config(letta.LLMConfig.default_config(\"gpt-4o-mini\")) \n",
+    "letta_client.set_default_embedding_config(letta.EmbeddingConfig.default_config(\"text-embedding-ada-002\")) "
    ]
   },
   {
@@ -42,7 +42,38 @@
    "outputs": [],
    "source": [
     "# Delete agent if already exists. Throws error if it doesn't exist\n",
-    "client.delete_agent(client.get_agent_id(agent_name))"
+    "letta_client.delete_agent(letta_client.get_agent_id(agent_name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Loading information\n",
+    "source_info = letta_client.create_source(\"sanjay_information\")\n",
+    "\n",
+    "letta_client.load_file_to_source(\n",
+    "    filename=\"./data/Doc1_Sanjay_Info.pdf\", \n",
+    "    source_id=source_info.id\n",
+    ")\n",
+    "\n",
+    "# Loading interview\n",
+    "source_interview = letta_client.create_source(\"sanjay_interview\")\n",
+    "\n",
+    "letta_client.load_file_to_source(\n",
+    "    filename=\"./data/Doc2_Sanjay_Interview.pdf\", \n",
+    "    source_id=source_interview.id\n",
+    ")\n",
+    "\n",
+    "# Loading book\n",
+    "source_book = letta_client.create_source(\"sanjay_book\")\n",
+    "\n",
+    "letta_client.load_file_to_source(\n",
+    "    filename=\"./data/Doc3_ Sanjay_Book.pdf\", \n",
+    "    source_id=source_book.id\n",
+    ")"
    ]
   },
   {
@@ -52,7 +83,7 @@
    "outputs": [],
    "source": [
     "# Create sanjay agent\n",
-    "agent_state = client.create_agent(\n",
+    "agent_state = letta_client.create_agent(\n",
     "    name=agent_name, \n",
     "    memory=ChatMemory(\n",
     "        human=\"\",\n",
@@ -79,8 +110,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Adding all the sources to agent\n",
+    "letta_client.attach_source_to_agent(\n",
+    "    agent_id=agent_state.id, \n",
+    "    source_id=source_info.id\n",
+    ")\n",
+    "\n",
+    "letta_client.attach_source_to_agent(\n",
+    "    agent_id=agent_state.id, \n",
+    "    source_id=source_interview.id\n",
+    ")\n",
+    "\n",
+    "letta_client.attach_source_to_agent(\n",
+    "    agent_id=agent_state.id, \n",
+    "    source_id=source_book.id\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Getting and printing response\n",
-    "response = client.send_message(\n",
+    "response = letta_client.send_message(\n",
     "    agent_id=agent_state.id, \n",
     "    message=\"\", \n",
     "    role=\"user\" \n",
@@ -91,7 +145,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".chat-memory",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
