tool for rag with letta. experimenting with rag. restructuring

--- a/notebooks/chroma_db.ipynb
+++ b/notebooks/chroma_db.ipynb
@@ -4,23 +4,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/abhayrokkam/projects/chat-memory/.chat-memory/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import chromadb\n",
     "\n",
-    "from sentence_transformers import SentenceTransformer\n",
-    "\n",
     "import re\n",
     "\n",
+    "from langchain_openai import OpenAIEmbeddings\n",
     "from langchain.document_loaders import Docx2txtLoader\n",
     "from langchain_text_splitters import RecursiveCharacterTextSplitter"
    ]
@@ -41,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = SentenceTransformer('all-MiniLM-L6-v2')"
+    "model = OpenAIEmbeddings(model='text-embedding-ada-002')"
    ]
   },
   {
@@ -59,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_document_chunks(file_path, chunk_size=500, chunk_overlap=100):\n",
+    "def get_document_chunks(file_path, chunk_size=500, chunk_overlap=50):\n",
     "    loader = Docx2txtLoader(file_path)\n",
     "    documents = loader.load()\n",
     "    \n",
@@ -70,7 +60,7 @@
     "    chunks = text_splitter.split_documents(documents)\n",
     "    return [chunk.page_content for chunk in chunks]\n",
     "\n",
-    "def get_quoted_document_chunks(file_path, chunk_size=300, chunk_overlap=50):\n",
+    "def get_quoted_document_chunks(file_path, chunk_size=500, chunk_overlap=50):\n",
     "    loader = Docx2txtLoader(file_path)\n",
     "    documents = loader.load()\n",
     "    \n",
@@ -108,7 +98,7 @@
     "chunks = get_document_chunks(doc_path)\n",
     "ids = [(doc_title + str(i)) for i in range(len(chunks))]\n",
     "metadata = [{'title': doc_title, 'text': chunk} for chunk in chunks]\n",
-    "embeddings = model.encode(chunks)\n",
+    "embeddings = model.embed_documents(chunks)\n",
     "\n",
     "collection.add(\n",
     "    ids = ids,\n",
@@ -131,7 +121,7 @@
     "chunks = get_quoted_document_chunks(doc_path)\n",
     "ids = [(doc_title + str(i)) for i in range(len(chunks))]\n",
     "metadata = [{'title': doc_title, 'text': chunk} for chunk in chunks]\n",
-    "embeddings = model.encode(chunks)\n",
+    "embeddings = model.embed_documents(chunks)\n",
     "\n",
     "collection.add(\n",
     "    ids = ids,\n",
