--- a/notebooks/letta_test.ipynb
+++ b/notebooks/letta_test.ipynb
@@ -2,19 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!rm  -f ~/.letta/sqlite.db"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import letta\n",
-    "\n",
     "from letta.schemas.memory import ChatMemory\n",
+    "\n",
+    "import chromadb\n",
+    "\n",
+    "from langchain_openai import OpenAIEmbeddings\n",
+    "from langchain.vectorstores import Chroma\n",
+    "\n",
     "from prompts import sanjay_persona, system_prompt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,39 +55,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Delete agent if already exists. Throws error if it doesn't exist\n",
-    "letta_client.delete_agent(letta_client.get_agent_id(agent_name))"
+    "# Getting the vector_db with Sanjay Sarma's information\n",
+    "chroma_client = chromadb.PersistentClient(path='./chromadb')\n",
+    "sanjay_collection = chroma_client.get_collection(name='sanjay_sarma')\n",
+    "\n",
+    "vdb_embed_model = OpenAIEmbeddings(model='text-embedding-ada-002')\n",
+    "\n",
+    "vectordb = Chroma(\n",
+    "    collection_name='sanjay_sarma',\n",
+    "    embedding_function=vdb_embed_model,\n",
+    "    persist_directory=\"./chromadb\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Loading information\n",
-    "source_info = letta_client.create_source(\"sanjay_information\")\n",
+    "# Function as tool\n",
+    "def get_sanjay_information(query: str):\n",
+    "    \"\"\"\n",
+    "    Retrieves relevant information related to a query.\n",
     "\n",
-    "letta_client.load_file_to_source(\n",
-    "    filename=\"./data/Doc1_Sanjay_Info.pdf\", \n",
-    "    source_id=source_info.id\n",
-    ")\n",
+    "    Args:\n",
+    "        query (str): The query string for which information is being retrieved.\n",
     "\n",
-    "# Loading interview\n",
-    "source_interview = letta_client.create_source(\"sanjay_interview\")\n",
+    "    Returns:\n",
+    "        str: The concatenated content of the relevant search results based on the query.\n",
+    "    \"\"\"\n",
+    "    text = \"\"\n",
+    "    results = vectordb.similarity_search(query, k=3)\n",
+    "    for result in results:\n",
+    "        text += result.page_content\n",
+    "    return text\n",
     "\n",
-    "letta_client.load_file_to_source(\n",
-    "    filename=\"./data/Doc2_Sanjay_Interview.pdf\", \n",
-    "    source_id=source_interview.id\n",
-    ")\n",
-    "\n",
-    "# Loading book\n",
-    "source_book = letta_client.create_source(\"sanjay_book\")\n",
-    "\n",
-    "letta_client.load_file_to_source(\n",
-    "    filename=\"./data/Doc3_ Sanjay_Book.pdf\", \n",
-    "    source_id=source_book.id\n",
-    ")"
+    "get_info_tool = letta_client.create_tool(get_sanjay_information)"
    ]
   },
   {
@@ -84,7 +101,8 @@
    "source": [
     "# Create sanjay agent\n",
     "agent_state = letta_client.create_agent(\n",
-    "    name=agent_name, \n",
+    "    name=agent_name,\n",
+    "    tool_ids=[get_info_tool.id],\n",
     "    memory=ChatMemory(\n",
     "        human=\"\",\n",
     "        persona=sanjay_persona\n",
@@ -96,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,33 +128,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Adding all the sources to agent\n",
-    "letta_client.attach_source_to_agent(\n",
-    "    agent_id=agent_state.id, \n",
-    "    source_id=source_info.id\n",
-    ")\n",
-    "\n",
-    "letta_client.attach_source_to_agent(\n",
-    "    agent_id=agent_state.id, \n",
-    "    source_id=source_interview.id\n",
-    ")\n",
-    "\n",
-    "letta_client.attach_source_to_agent(\n",
-    "    agent_id=agent_state.id, \n",
-    "    source_id=source_book.id\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Getting and printing response\n",
+    "user_message = \"Tell me about your grandfather? What did he do?\"\n",
+    "\n",
     "response = letta_client.send_message(\n",
     "    agent_id=agent_state.id, \n",
-    "    message=\"\", \n",
+    "    message=user_message, \n",
     "    role=\"user\" \n",
     ")\n",
     "response"
@@ -145,7 +142,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".chat-memory",
    "language": "python",
    "name": "python3"
   },
