restructuring. creating modules

--- a/notebooks/chroma_db.ipynb
+++ b/notebooks/chroma_db.ipynb
@@ -22,7 +22,7 @@
    "outputs": [],
    "source": [
     "client = chromadb.Client()\n",
-    "client = chromadb.PersistentClient(path='./chromadb/')"
+    "client = chromadb.PersistentClient(path='../chromadb/')"
    ]
   },
   {
@@ -91,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "doc_path = \"./data/Doc1_Sanjay_Info.docx\"\n",
+    "doc_path = \"../data/Doc1_Sanjay_Info.docx\"\n",
     "filter_pattern = r\"(?<=./data/)(.*?)(?=\\.docx)\"\n",
     "doc_title = re.search(filter_pattern, doc_path).group(0)\n",
     "\n",
@@ -114,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "doc_path = \"./data/Doc2_Sanjay_Interview.docx\"\n",
+    "doc_path = \"../data/Doc2_Sanjay_Interview.docx\"\n",
     "filter_pattern = r\"(?<=./data/)(.*?)(?=\\.docx)\"\n",
     "doc_title = re.search(filter_pattern, doc_path).group(0)\n",
     "\n",
