letta client in engine

--- a/notebooks/letta_test.ipynb
+++ b/notebooks/letta_test.ipynb
@@ -51,7 +51,7 @@
    "outputs": [],
    "source": [
     "# Setting agent name\n",
-    "agent_name = 'dr_sanjay_sarma'"
+    "agent_name = 'sanjay_sarma'"
    ]
   },
   {
